--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ importlib-resources==5.12.0
 Jinja2==3.1.2
 jsonschema==4.17.3
 keras
+keras-facenet
 kiwisolver==1.4.4
 markdown-it-py==2.2.0
 MarkupSafe==2.1.2
